# markprint

./: .env.example  .gitignore  .pdm-python  CHANGELOG.md  DOCS.md  Makefile  README.md  RELEASE.md  TESTING_REPORT.md  markprint.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  configuration.md  design.md  frontmatter.md  index.md  installation.md  logging.md  profiles.md  python-api.md  quickstart.md  themes.md
docs/advanced/: custom-themes.md  diagrams.md  index.md  logging.md  math.md  pdf-post-processing.md  plugins.md  raw-markdown-input.md  visual-regression.md
docs/concepts/: architecture.md  configuration-model.md  index.md  input-output.md  pipeline.md
docs/development/: docs.md  index.md  release.md  testing.md
docs/engines/: index.md  pandoc.md  playwright.md  weasyprint.md
docs/examples/: academic-paper.md  academic.md  index.md  readme.md  report.md
docs/getting-started/: first-pdf.md  index.md  installation.md  quickstart.md  workflows.md
docs/guides/: batch-rendering.md  debugging.md  index.md  manuals.md  reports.md  resumes.md
docs/markdown/: markdown-it.md  python-markdown.md
docs/reference/: cli.md  configuration.md  frontmatter.md  index.md  profiles.md  python-api.md  themes.md
examples/academic/: paper.md  refs.bib
examples/diagrams/: architecture.md
examples/readme/: README.md
examples/report/: report.md
examples/resume/: resume.md
src/markprint/: __init__.py  __main__.py  api.py  cli.py  pipeline.py
src/markprint/config/: __init__.py  defaults.py  discovery.py  merge.py  models.py  precedence.py  profiles.py
src/markprint/diagnostics/: __init__.py  doctor.py  errors.py  report.py
src/markprint/diagrams/: __init__.py  base.py  mermaid.py
src/markprint/document/: __init__.py  blocks.py  headings.py  metadata.py  models.py  toc.py
src/markprint/frontmatter/: __init__.py  parser.py
src/markprint/highlighting/: __init__.py  pygments.py
src/markprint/html/: __init__.py  builder.py  sanitizer.py  templates.py
src/markprint/logging/: __init__.py  base.py  stdlib.py  ultilog.py
src/markprint/markdown/: __init__.py  base.py  extensions.py  markdown_it.py  pandoc.py  python_markdown.py
src/markprint/math/: __init__.py  base.py  katex.py  mathjax.py
src/markprint/pdf/: __init__.py  inspect.py  merge.py  metadata.py  optimize.py  preview.py
src/markprint/plugins/: __init__.py  entrypoints.py  registry.py
src/markprint/renderers/: __init__.py  base.py  pandoc.py  playwright.py  weasyprint.py
src/markprint/sources/: __init__.py  assets.py  globbing.py  loader.py  models.py  resolver.py  stdin.py
src/markprint/testing/: __init__.py  fixtures.py  snapshots.py
src/markprint/themes/: __init__.py  loader.py  models.py  registry.py
src/markprint/themes/builtin/default/: document.html.j2
src/markprint/themes/builtin/dracula/: variables.css
src/markprint/themes/builtin/nord/: variables.css
src/markprint/themes/builtin/report/: theme.css  variables.css
tests/: conftest.py
tests/e2e/: test_raw_markdown_to_html.py
tests/integration/: test_api_html.py  test_cli_smoke.py
tests/unit/: test_additional_coverage.py  test_frontmatter_parser.py  test_render_options.py  test_source_loader.py  test_theme_registry.py  test_toc_builder.py
tests/visual/: test_snapshot_helpers.py
